--- a/src/Pages/RefeicaoForm/RefeicaoForm.module.css
+++ b/src/Pages/RefeicaoForm/RefeicaoForm.module.css
@@ -23,7 +23,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  padding: 1.25rem 1.25rem 2rem 1.25rem;
+  padding: 1.25rem 1.25rem .5rem 1.25rem;
 }
 
 .row {
